--- a/src/styles/General.module.css
+++ b/src/styles/General.module.css
@@ -37,7 +37,6 @@ nav{
     width: 73px;
     height: 37px;
     text-align: center;
-    /* background-color: rgba(255, 245, 238, 0.43); */
     border: none;
     background-color: transparent;
     cursor: pointer;
@@ -47,6 +46,25 @@ nav{
     font-weight: bold;
     font-size: 16px;
     color: white;
+    text-decoration: none;
+}
+
+.button_nav_estimate {
+    display: inline-block;
+    width: 95px;
+    height: 50px;
+    text-align: center;
+    border-radius: 10px;
+    border: none;
+    background-color: rgba(247, 193, 58, 0.9);
+    /* background-color: rgba(255, 255, 255, 0.9); */
+    cursor: pointer;
+    margin-left: 30px;
+    margin-right: 1px;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 16px;
+    color: black;
     text-decoration: none;
 }
 
