--- a/src/styles/SubPage.module.css
+++ b/src/styles/SubPage.module.css
@@ -6,3 +6,13 @@
     padding: 2%;
     /* you can use stuff from other modules with "composes" */
 }
+
+.form_text {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    font-size: 16px;
+}
+
+.warning{
+    color: red;
+}
