--- a/src/styles/SubPage.module.css
+++ b/src/styles/SubPage.module.css
@@ -13,6 +13,13 @@
     font-size: 16px;
 }
 
+.form_message {
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 5px;
+    font-size: 16px;
+    width: 70%;
+}
+
 .warning{
     color: red;
 }
